# spec-hack

./: .gitignore  AGENTS.md  LICENSE  README-zh.md  README.md  pyproject.toml  spec-driven.md
.github/workflows/: release.yml
.github/workflows/scripts/: check-release-exists.ps1  check-release-exists.sh  create-release-packages.ps1  create-release-packages.sh  get-next-version.ps1  get-next-version.sh
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-assessment.sh  setup-mcp.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-assessment.ps1  setup-mcp.ps1  setup-plan.ps1  update-agent-context.ps1
scripts/python/: ai_penetration_testing.py
src/spechack_cli/: __init__.py  __main__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  implement.md  plan.md  specify.md  tasks.md
